# morphing_birds

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: mean_hawk_shape.csv
examples/: DMD_notebook.ipynb  PCA_notebook.ipynb  animate-morphing.ipynb  morphing_pipeline.ipynb  trytofix_copy.ipynb
src/morphing_birds/: Animator.py  Hawk3D.py  HawkDash.py  HawkData.py  HawkPCA.py  HawkPlotter.py  Keypoints.py  PCAFigures.py  __init__.py  trytofix.py
tests/: test_loading_data.py
